# drf-LodgeLink

./: .env  .env.example  pyproject.toml
Airbnb_Clone/: manage.py
Airbnb_Clone/Airbnb_Clone/: asgi.py  settings.py  urls.py  wsgi.py
Airbnb_Clone/accounts/: exceptions.py  models.py  serializers.py  urls.py  views.py
Airbnb_Clone/accounts/otp_logic/: services.py  utils.py
Airbnb_Clone/accounts/sub_views/: account_deletion.py  two_factor.py
Airbnb_Clone/accounts/templates/accounts/emails/: base_email.html  email_verification.html  email_verification.txt  password_reset.html  password_reset.txt
