[project]
name = "authentication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery>=5.6.3",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-ratelimit>=4.1.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pyotp>=2.10.0",
    "python-decouple>=3.8",
    "qrcode[pil]>=8.2",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "user-agents>=2.2.0",
]
